--- a/css/styles.css
+++ b/css/styles.css
@@ -4,29 +4,22 @@ div#campo {
     height: 945px;
     margin: auto;
 }
-div#mensajes{
-    background: no-repeat url("../images/contador.jpg") ;
-    position: relative;
-    width: 688px;
-    height: 515px;
-    top: 500px;
-    right: -500px;
-}
 
 
-div#nube {
+
+#nube {
     position: relative;
     background: no-repeat url("../images/nube.png");
     width: 500px;
     height: 500px;
 }
-div#lluvia{
+#lluvia{
     background: no-repeat url("../images/lluvia-removebg-preview.png");
     position: relative;
     width: 300px;
     height: 698px;
 }
-div#sol{
+#sol{
     background: no-repeat url("../images/sol.png");
     position: relative;
     width: 640px;
@@ -34,4 +27,135 @@ div#sol{
     top: -500px;
     right: -1000px;
 
+    opacity: 100%;
+    animation-name: sol;
+    animation-duration: 10s;
+    animation-delay: 12s;
+    animation-iteration-count: 1;
+    animation-timing-function: ease;
+    animation-direction: normal ;
+    animation-fill-mode: backwards;
+}
+@keyframes sol {
+    0%{
+        opacity: 60%;
+    }
+    100%{
+        opacity: 100%;
+    }
+    
+}
+
+#mensajes1{
+    background: no-repeat url("../images/contador.png") ;
+    position: absolute;
+    width: 600px;
+    height: 130px;
+    top: 400px;
+    right: 700px;
+    background-position: 0 0;
+
+    animation-name: contador;
+    animation-duration: 3s;
+    animation-delay: 1s;
+    animation-iteration-count: 1;
+    animation-timing-function: ease;
+    animation-direction: normal ;
+    opacity: 0;
+}
+
+@keyframes contador {
+    0%{
+        opacity: 0%;
+    }
+    50%{
+        opacity: 100%;
+    }
+    100%{
+        opacity: 0%;
+    }
+}
+#mensajes2{
+    background: no-repeat url("../images/contador.png") ;
+    position: absolute;
+    width: 600px;
+    height: 130px;
+    top: 400px;
+    right: 700px;
+    background-position: 0 -130px;
+
+    animation-name: contador;
+    animation-duration: 3s;
+    animation-delay: 4s;
+    animation-iteration-count: 1;
+    animation-timing-function: ease;
+    animation-direction: normal ;
+    opacity: 0;
+}
+@keyframes contador{
+    0%{
+        opacity: 0%;
+    }
+    50%{
+        opacity: 100%;
+    }
+    100%{
+        opacity: 0%;
+    }
+}
+#mensajes3{
+    background: no-repeat url("../images/contador.png") ;
+    position: absolute;
+    width: 600px;
+    height: 130px;
+    top: 400px;
+    right: 700px;
+    background-position: 0 -280px;
+
+    animation-name: contador;
+    animation-duration: 3s;
+    animation-delay: 7s;
+    animation-iteration-count: 1;
+    animation-timing-function: ease;
+    animation-direction: normal ;
+    opacity: 0;
+}
+@keyframes contador{
+    0%{
+        opacity: 0%;
+    }
+    50%{
+        opacity: 100%;
+    }
+    100%{
+        opacity: 0%;
+    }
+}
+#mensajes4{
+    background: no-repeat url("../images/contador.png") ;
+    position: absolute;
+    width: 600px;
+    height: 130px;
+    top: 400px;
+    right: 700px;
+    background-position: 0 -400px;
+
+    animation-name: contador;
+    animation-duration: 3s;
+    animation-delay: 10s;
+    animation-iteration-count: 1;
+    animation-timing-function: ease;
+    animation-direction: normal ;
+    opacity: 0;
+}
+@keyframes contador{
+    0%{
+        opacity: 0%;
+    }
+    50%{
+        opacity: 100%;
+    }
+    100%{
+        opacity: 0%;
+    }
 }
