--- a/css/styles.css
+++ b/css/styles.css
@@ -12,13 +12,101 @@ div#campo {
     background: no-repeat url("../images/nube.png");
     width: 500px;
     height: 500px;
+    top: -100px;
+    opacity: 0%;
+    animation-name: nubecita;
+    animation-duration: 8s;
+    animation-delay: 9s;
+    animation-iteration-count: 1;
+    animation-timing-function: linear;
+    animation-direction: normal ;
+    animation-fill-mode: none;
+    z-index: 2;
 }
+@keyframes nubecita {
+    0%{
+        right: -1500px;
+        opacity: 0%;
+    }
+    0.1%{
+        opacity: 100%;
+    }
+    40%{
+        opacity: 100%;
+        right: -600px;
+    }
+    60%{
+        opacity: 100%;
+        right: -600px;
+    }
+    100%{
+        opacity: 100%;
+        right: 2000px;
+
+    }
+}
+
 #lluvia{
     background: no-repeat url("../images/lluvia-removebg-preview.png");
     position: relative;
     width: 300px;
     height: 698px;
+    right: -80px;
+
+
+    opacity: 0%;
+    animation-name: lluvia;
+    animation-duration: 0.5s;
+    animation-delay: 11.5s;
+    animation-iteration-count: 5;
+    animation-timing-function: linear;
+    animation-direction: normal ;
+    animation-fill-mode: none;
 }
+@keyframes lluvia {
+    0%{
+        opacity: 0%;
+        top: 250px
+    }
+    0.1%{
+        opacity: 100%;
+    }
+    100%{
+        opacity: 100%;
+        top: 1000px
+        
+    }
+}
+#flor{
+    background: no-repeat url("../images/florecita.png");
+    position: relative;
+    width: 512px;
+    height: 512px;
+    left: 500px;
+    opacity: 0%;
+    animation-name: flor;
+    animation-duration: 4s;
+    animation-delay: 14s;
+    animation-iteration-count: 1;
+    animation-timing-function: linear;
+    animation-direction: normal ;
+    animation-fill-mode: forwards;
+}
+@keyframes flor {
+    0%{
+        opacity: 0%;
+        top: 500px
+    }
+    0.1%{
+        opacity: 100%;
+    }
+    100%{
+        opacity: 100%;
+        top: -400px
+        
+    }
+}
+
 #sol{
     background: no-repeat url("../images/sol.png");
     position: relative;
@@ -35,6 +123,7 @@ div#campo {
     animation-timing-function: ease;
     animation-direction: normal ;
     animation-fill-mode: backwards;
+    z-index: 1;
 }
 @keyframes sol {
     0%{
@@ -56,7 +145,7 @@ div#campo {
     background-position: 0 0;
 
     animation-name: contador;
-    animation-duration: 3s;
+    animation-duration: 2s;
     animation-delay: 1s;
     animation-iteration-count: 1;
     animation-timing-function: ease;
@@ -85,8 +174,8 @@ div#campo {
     background-position: 0 -130px;
 
     animation-name: contador;
-    animation-duration: 3s;
-    animation-delay: 4s;
+    animation-duration: 2s;
+    animation-delay: 3s;
     animation-iteration-count: 1;
     animation-timing-function: ease;
     animation-direction: normal ;
@@ -113,8 +202,8 @@ div#campo {
     background-position: 0 -280px;
 
     animation-name: contador;
-    animation-duration: 3s;
-    animation-delay: 7s;
+    animation-duration: 2s;
+    animation-delay: 5s;
     animation-iteration-count: 1;
     animation-timing-function: ease;
     animation-direction: normal ;
@@ -138,11 +227,11 @@ div#campo {
     height: 130px;
     top: 400px;
     right: 700px;
-    background-position: 0 -400px;
+    background-position: 0 -425px;
 
     animation-name: contador;
-    animation-duration: 3s;
-    animation-delay: 10s;
+    animation-duration: 2s;
+    animation-delay: 7s;
     animation-iteration-count: 1;
     animation-timing-function: ease;
     animation-direction: normal ;
